--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -142,7 +142,7 @@ ja:
     select:
       prompt: 選択してください
     submit:
-      create: 登録する
+      create: 相談を開始する
       submit: 保存する
       update: 更新する
   number:
